[WPE] Trying to access the remote inspector hits an assertion in the UIProcess https://bugs.webkit.org/show_bug.cgi?id=186588

Reviewed by Carlos Garcia Campos.

Make both the WPE and GTK+ ports use /org/webkit/inspector as base prefix
for resource paths, which avoids needing a switcheroo depending on the port.

Source/JavaScriptCore:

* inspector/remote/glib/RemoteInspectorUtils.cpp:

Source/WebKit:

* UIProcess/API/wpe/WebKit2InspectorGResourceBundle.xml:
* UIProcess/gtk/WebInspectorProxyGtk.cpp:
(WebKit::WebInspectorProxy::inspectorPageURL):
(WebKit::WebInspectorProxy::inspectorTestPageURL):
(WebKit::WebInspectorProxy::inspectorBaseURL):
* UIProcess/wpe/WebInspectorProxyWPE.cpp:
(WebKit::WebInspectorProxy::inspectorPageURL):
(WebKit::WebInspectorProxy::inspectorTestPageURL):
(WebKit::WebInspectorProxy::inspectorBaseURL):
* WebProcess/WebPage/gtk/WebInspectorUIGtk.cpp:
(WebKit::WebInspectorUI::localizedStringsURL):
(WebKit::RemoteWebInspectorUI::localizedStringsURL):

Tools:

* WebKitTestRunner/InjectedBundle/gtk/TestRunnerGtk.cpp:
(WTR::TestRunner::inspectorTestStubURL):
* glib/generate-inspector-gresource-manifest.py:


Canonical link: https://commits.webkit.org/201941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232832 268f45cc-cd09-0410-ab3c-d52691b4dbfc