Source/WebKit/UIProcess/gtk/WebInspectorProxyGtk.cpp
@@ -338,17 +338,17 @@ void WebInspectorProxy::platformInspectedURLChanged(const String& url)
 
 String WebInspectorProxy::inspectorPageURL()
 {
-    return String("resource:///org/webkitgtk/inspector/UserInterface/Main.html");
+    return String("resource:///org/webkit/inspector/UserInterface/Main.html");
 }
 
 String WebInspectorProxy::inspectorTestPageURL()
 {
-    return String("resource:///org/webkitgtk/inspector/UserInterface/Test.html");
+    return String("resource:///org/webkit/inspector/UserInterface/Test.html");
 }
 
 String WebInspectorProxy::inspectorBaseURL()
 {
-    return String("resource:///org/webkitgtk/inspector/UserInterface/");
+    return String("resource:///org/webkit/inspector/UserInterface/");
 }
 
 unsigned WebInspectorProxy::platformInspectedWindowHeight()
